# oct

./: .gitignore  README.md
nextjs-with-typescript/: .prettierrc.toml  package-lock.json  package.json  tsconfig.json
nextjs-with-typescript/pages/: 404.tsx  _app.tsx  _document.tsx  account.tsx  index.tsx  login.tsx  logout.tsx  schedule.tsx  signup.tsx
nextjs-with-typescript/pages/@/: [user].tsx
nextjs-with-typescript/src/: AppointmentChecker.tsx  AppointmentStatus.tsx  CenterContainer.tsx  CollapseTableRow.tsx  ProTip.tsx  ScheduleButton.tsx  apiTypes.ts  theme.ts
oct-original/: Cargo.toml
oct-original/migrations/2022-11-06-184257_users/: up.sql
oct-original/migrations/2023-01-04-205130_appointments/: up.sql
oct-original/src/: db.rs  endpoints.rs  lib.rs  main.rs  models.rs  schema.rs
