[package]
name = "oct"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.2", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
chrono = { version = "0.4.22", features = ["serde", "rustc-serialize"] }
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
rust-argon2 = "1.0"
serde_derive = "1.0.151"
serde = "1.0"
